Fixed firefox header issue, fixed a issue with 5 rings on mobile

--- a/html/css/landing-styles.css
+++ b/html/css/landing-styles.css
@@ -141,7 +141,7 @@ ul {
         position: relative;
         padding-left: 0;
     }
-    .table-item-small {
+    .item-small {
         width: 75px;
         height: 75px;
         font-size: 10px;
